@@ -1,3 +1,10 @@
+2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
+	* PkgVersion.pm: Document some functions.
+	* PkgVersion.pm, Engine.pm: Replace 'parentessential' concept with
+	built_with_essential function, which should make it possible for an
+	essential package to be a splitoff.
+
 2005-07-28  Dave Vasilevsky  <vasi@users.sourceforge.net>
 
 	* Engine.pm: Separate dep checking and dep switching, so we don't switch
